syntax = "proto3";

package ccm.daemon;

service CcmDaemon {
    // Provider management
    rpc ListProviders(Empty) returns (ListProvidersResponse);

    // Repo management
    rpc AddRepo(AddRepoRequest) returns (RepoInfo);
    rpc ListRepos(Empty) returns (ListReposResponse);
    rpc RemoveRepo(RemoveRepoRequest) returns (Empty);

    // Worktree management
    rpc ListWorktrees(ListWorktreesRequest) returns (ListWorktreesResponse);
    rpc CreateWorktree(CreateWorktreeRequest) returns (WorktreeInfo);
    rpc RemoveWorktree(RemoveWorktreeRequest) returns (Empty);
    rpc DeleteBranch(DeleteBranchRequest) returns (Empty);

    // Session management
    rpc ListSessions(ListSessionsRequest) returns (ListSessionsResponse);
    rpc CreateSession(CreateSessionRequest) returns (SessionInfo);
    rpc RenameSession(RenameSessionRequest) returns (SessionInfo);
    rpc DestroySession(DestroySessionRequest) returns (Empty);
    rpc StopSession(StopSessionRequest) returns (Empty);

    // Attach/Detach
    rpc AttachSession(stream AttachInput) returns (stream AttachOutput);

    // Event subscription (real-time updates)
    rpc SubscribeEvents(SubscribeEventsRequest) returns (stream Event);

    // Diff operations
    rpc GetDiffFiles(GetDiffFilesRequest) returns (GetDiffFilesResponse);
    rpc GetFileDiff(GetFileDiffRequest) returns (GetFileDiffResponse);

    // Review/Comment operations
    rpc CreateLineComment(CreateLineCommentRequest) returns (LineCommentInfo);
    rpc UpdateLineComment(UpdateLineCommentRequest) returns (LineCommentInfo);
    rpc DeleteLineComment(DeleteLineCommentRequest) returns (Empty);
    rpc ListLineComments(ListLineCommentsRequest) returns (ListLineCommentsResponse);

    // Git Status operations
    rpc GetGitStatus(GetGitStatusRequest) returns (GetGitStatusResponse);
    rpc StageFile(StageFileRequest) returns (Empty);
    rpc UnstageFile(UnstageFileRequest) returns (Empty);
    rpc StageAll(StageAllRequest) returns (Empty);
    rpc UnstageAll(UnstageAllRequest) returns (Empty);
    rpc GitPush(GitPushRequest) returns (GitPushResponse);
    rpc GitPull(GitPullRequest) returns (GitPullResponse);

    // TODO operations
    rpc CreateTodo(CreateTodoRequest) returns (TodoItem);
    rpc UpdateTodo(UpdateTodoRequest) returns (TodoItem);
    rpc DeleteTodo(DeleteTodoRequest) returns (Empty);
    rpc ListTodos(ListTodosRequest) returns (ListTodosResponse);
    rpc ToggleTodo(ToggleTodoRequest) returns (TodoItem);
    rpc ReorderTodo(ReorderTodoRequest) returns (TodoItem);
}

message Empty {}

// ============ Provider ============

message ProviderInfo {
    string name = 1;            // Provider identifier (e.g., "claude", "codex")
    string display_name = 2;    // Display name for UI (e.g., "Claude", "OpenAI Codex")
    repeated string models = 3; // Available models
    string default_model = 4;   // Default model name
}

message ListProvidersResponse {
    repeated ProviderInfo providers = 1;
}

// ============ Repo ============

message AddRepoRequest {
    string path = 1;  // Path to git repository
}

message RemoveRepoRequest {
    string id = 1;
}

message ListReposResponse {
    repeated RepoInfo repos = 1;
}

message RepoInfo {
    string id = 1;
    string name = 2;
    string path = 3;
    int32 session_count = 4;
}

// ============ Worktree ============

message ListWorktreesRequest {
    string repo_id = 1;
}

message ListWorktreesResponse {
    repeated WorktreeInfo worktrees = 1;
}

message CreateWorktreeRequest {
    string repo_id = 1;
    string branch = 2;
    optional string base_branch = 3;  // Branch to create from (if branch doesn't exist)
}

message RemoveWorktreeRequest {
    string repo_id = 1;
    string branch = 2;
}

message DeleteBranchRequest {
    string repo_id = 1;
    string branch = 2;
}

message WorktreeInfo {
    string repo_id = 1;
    string branch = 2;
    string path = 3;
    bool is_main = 4;
    int32 session_count = 5;
}

// ============ Session ============

message ListSessionsRequest {
    optional string repo_id = 1;    // Filter by repo
    optional string branch = 2;     // Filter by branch
}

message ListSessionsResponse {
    repeated SessionInfo sessions = 1;
}

message CreateSessionRequest {
    string repo_id = 1;
    string branch = 2;
    optional string name = 3;  // Custom name (optional)
    optional bool is_shell = 4;  // true to create shell-only session (no AI)
    optional string model = 5;  // AI model to use (e.g., "haiku", "sonnet")
    optional string prompt = 6; // Initial prompt for AI (only used on first start)
    optional string provider = 7; // AI provider to use (e.g., "claude", "codex"), default: "claude"
    optional uint32 rows = 8;  // Terminal rows (optional, default: 24)
    optional uint32 cols = 9;  // Terminal columns (optional, default: 80)
}

message RenameSessionRequest {
    string session_id = 1;
    string new_name = 2;
}

message DestroySessionRequest {
    string session_id = 1;
}

message StopSessionRequest {
    string session_id = 1;
}

message SessionInfo {
    string id = 1;
    string name = 2;
    string repo_id = 3;
    string branch = 4;
    string worktree_path = 5;
    SessionStatus status = 6;
    optional string provider_session_id = 7;  // Associated AI provider session ID
    optional bool is_shell = 8;  // true if this is a shell-only session
    optional string provider = 9;  // AI provider name (e.g., "claude", "codex")
}

enum SessionStatus {
    SESSION_STATUS_UNKNOWN = 0;
    SESSION_STATUS_RUNNING = 1;
    SESSION_STATUS_STOPPED = 2;
}

// ============ Attach ============

message AttachInput {
    string session_id = 1;
    bytes data = 2;
    // Resize event
    optional uint32 rows = 3;
    optional uint32 cols = 4;
}

message AttachOutput {
    bytes data = 1;
}

// ============ Events ============

message SubscribeEventsRequest {
    // Filter by repo_id (optional, empty means all repos)
    optional string repo_id = 1;
}

message Event {
    oneof event {
        SessionCreatedEvent session_created = 1;
        SessionDestroyedEvent session_destroyed = 2;
        SessionNameUpdatedEvent session_name_updated = 3;
        SessionStatusChangedEvent session_status_changed = 4;
        WorktreeAddedEvent worktree_added = 5;
        WorktreeRemovedEvent worktree_removed = 6;
        GitStatusChangedEvent git_status_changed = 7;
    }
}

message SessionCreatedEvent {
    SessionInfo session = 1;
}

message SessionDestroyedEvent {
    string session_id = 1;
    string repo_id = 2;
    string branch = 3;
}

message SessionNameUpdatedEvent {
    string session_id = 1;
    string old_name = 2;
    string new_name = 3;
}

message SessionStatusChangedEvent {
    string session_id = 1;
    SessionStatus old_status = 2;
    SessionStatus new_status = 3;
}

message WorktreeAddedEvent {
    WorktreeInfo worktree = 1;
}

message WorktreeRemovedEvent {
    string repo_id = 1;
    string branch = 2;
}

message GitStatusChangedEvent {
    string repo_id = 1;
    string branch = 2;
}

// ============ Diff ============

message GetDiffFilesRequest {
    string repo_id = 1;
    string branch = 2;  // worktree branch
}

message GetDiffFilesResponse {
    repeated DiffFileInfo files = 1;
}

message DiffFileInfo {
    string path = 1;
    FileStatus status = 2;
    int32 additions = 3;
    int32 deletions = 4;
}

enum FileStatus {
    FILE_STATUS_UNSPECIFIED = 0;
    FILE_STATUS_MODIFIED = 1;
    FILE_STATUS_ADDED = 2;
    FILE_STATUS_DELETED = 3;
    FILE_STATUS_RENAMED = 4;
    FILE_STATUS_UNTRACKED = 5;
}

message GetFileDiffRequest {
    string repo_id = 1;
    string branch = 2;
    string file_path = 3;
}

message GetFileDiffResponse {
    string file_path = 1;
    repeated DiffLine lines = 2;
}

message DiffLine {
    LineType line_type = 1;
    string content = 2;
    optional int32 old_lineno = 3;  // Line number in old file
    optional int32 new_lineno = 4;  // Line number in new file
}

enum LineType {
    LINE_TYPE_UNSPECIFIED = 0;
    LINE_TYPE_HEADER = 1;     // @@ ... @@
    LINE_TYPE_CONTEXT = 2;    // unchanged
    LINE_TYPE_ADDITION = 3;   // +
    LINE_TYPE_DELETION = 4;   // -
}

// ============ Review/Comments ============

message CreateLineCommentRequest {
    string repo_id = 1;
    string branch = 2;
    string file_path = 3;
    int32 line_number = 4;       // Line number in the diff view
    LineType line_type = 5;      // Type of line (addition/deletion/context)
    string comment = 6;          // Comment text
}

message UpdateLineCommentRequest {
    string comment_id = 1;
    string comment = 2;          // Updated comment text
}

message DeleteLineCommentRequest {
    string comment_id = 1;
}

message ListLineCommentsRequest {
    string repo_id = 1;
    string branch = 2;
    optional string file_path = 3;  // Filter by file (optional)
}

message ListLineCommentsResponse {
    repeated LineCommentInfo comments = 1;
}

message LineCommentInfo {
    string id = 1;
    string repo_id = 2;
    string branch = 3;
    string file_path = 4;
    int32 line_number = 5;
    LineType line_type = 6;
    string comment = 7;
    int64 created_at = 8;        // Unix timestamp
}

// ============ Git Status ============

message GetGitStatusRequest {
    string repo_id = 1;
    string branch = 2;
}

message GetGitStatusResponse {
    repeated GitStatusFile staged = 1;
    repeated GitStatusFile unstaged = 2;
    repeated GitStatusFile untracked = 3;
}

message GitStatusFile {
    string path = 1;
    FileStatus status = 2;
}

message StageFileRequest {
    string repo_id = 1;
    string branch = 2;
    string file_path = 3;
}

message UnstageFileRequest {
    string repo_id = 1;
    string branch = 2;
    string file_path = 3;
}

message StageAllRequest {
    string repo_id = 1;
    string branch = 2;
}

message UnstageAllRequest {
    string repo_id = 1;
    string branch = 2;
}

message GitPushRequest {
    string repo_id = 1;
    string branch = 2;
}

message GitPushResponse {
    bool success = 1;
    string message = 2;
}

message GitPullRequest {
    string repo_id = 1;
    string branch = 2;
}

message GitPullResponse {
    bool success = 1;
    string message = 2;
}

// ============ TODO ============

message TodoItem {
    string id = 1;
    string repo_id = 2;
    string title = 3;
    optional string description = 4;
    bool completed = 5;
    optional string parent_id = 6;
    int32 order = 7;
    int64 created_at = 8;  // Unix timestamp
    int64 updated_at = 9;  // Unix timestamp
}

message CreateTodoRequest {
    string repo_id = 1;
    string title = 2;
    optional string description = 3;
    optional string parent_id = 4;
}

message UpdateTodoRequest {
    string todo_id = 1;
    optional string title = 2;
    optional string description = 3;
    optional bool completed = 4;
    optional int32 order = 5;
}

message DeleteTodoRequest {
    string todo_id = 1;
}

message ListTodosRequest {
    string repo_id = 1;
    optional bool include_completed = 2;
}

message ListTodosResponse {
    repeated TodoItem items = 1;
}

message ToggleTodoRequest {
    string todo_id = 1;
}

message ReorderTodoRequest {
    string todo_id = 1;
    int32 new_order = 2;
    optional string new_parent_id = 3;
}
